--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,12 @@ main {
     background-color: #d2d2db;
     border-radius: 20px;
 }
+a {
+    text-decoration: none;
+}
+a:link, a:visited {
+    color: inherit;
+}
 h1 {
     font-weight: 600;
 }
@@ -21,4 +27,9 @@ h1 {
     .navbar-brand {
         display: none;
     }
-} 
+}
+
+.db-container {
+    background-color: #a4a4af;
+    border-radius: 10px;
+}
